--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,6 +42,7 @@
         <activity android:name=".activity.MyPageActivity" />
         <activity android:name=".activity.FilterActivity" />
         <activity android:name=".activity.NFCActivity" />
+        <activity android:name=".activity.PopUpFilter" />
         <activity android:name=".activity.ViewRecipeActivity" />
         <activity android:name=".activity.SendOutQRActivity" />
     </application>
