--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,19 +39,28 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activity.MainActivity" />
-        <activity android:name=".activity.CameraActivity" />
-        <activity android:name=".activity.MyPageActivity" />
+        <activity android:name=".activity.MainActivity"
+            android:screenOrientation="portrait" />
+        <activity android:name=".activity.CameraActivity"
+            android:screenOrientation="portrait" />
+        <activity android:name=".activity.MyPageActivity"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".activity.FilterActivity"
-            android:windowSoftInputMode="adjustPan" />
-        <activity android:name=".activity.NFCActivity" />
-        <activity android:name=".activity.PopUpFilter" />
-        <activity android:name=".activity.ViewRecipeActivity" />
-        <activity android:name=".activity.SendOutQRActivity" />
-        \
-        <activity android:name=".activity.recentlyViewedActivity" />
-        <activity android:name=".activity.SettingsActivity"></activity>
+            android:windowSoftInputMode="adjustPan"
+            android:screenOrientation="portrait" />
+        <activity android:name=".activity.NFCActivity"
+            android:screenOrientation="portrait" />
+        <activity android:name=".activity.PopUpFilter"
+            android:screenOrientation="portrait" />
+        <activity android:name=".activity.ViewRecipeActivity"
+            android:screenOrientation="portrait" />
+        <activity android:name=".activity.SendOutQRActivity"
+            android:screenOrientation="portrait" />
+        <activity android:name=".activity.recentlyViewedActivity"
+            android:screenOrientation="portrait" />
+        <activity android:name=".activity.SettingsActivity"
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
