영양정보 출력 기능 추가

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -61,6 +61,8 @@
             android:screenOrientation="portrait" />
         <activity android:name=".activity.SettingsActivity"
             android:screenOrientation="portrait" />
+        <activity android:name=".activity.viewNutrient"
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
