--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,7 @@
     <application
         android:name=".FoodingApplication"
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/logo"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
@@ -42,7 +42,7 @@
         <activity android:name=".activity.MainActivity"
             android:screenOrientation="portrait" />
         <activity android:name=".activity.CameraActivity"
-            android:screenOrientation="portrait" />
+             android:screenOrientation="portrait" />
         <activity android:name=".activity.MyPageActivity"
             android:screenOrientation="portrait" />
         <activity
